# Product-Matching-Yolov8-Annoy

./: .gitignore  build.gradle  gradle.properties  key.jks  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: class_names.txt  mobile.param
app/src/main/java/com/tencent/yolov8ncnn/: DetectedObject.java  MainActivity.java  Yolov8Ncnn.java  ZoomableImageView.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/jni/include/: ndkcamera.h  yolo.h
app/src/main/res/layout/: main.xml  sidebar_edittext_layout.xml  slider_layout.xml
app/src/main/res/menu/: drawer_view.xml
app/src/main/res/values/: strings.xml  styles.xml
